--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/reveal.js": "^5.0.3",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.7",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
